--- a/pom.xml
+++ b/pom.xml
@@ -17,18 +17,26 @@
 
 	<dependencies>
 
-		<!-- xls格式、以及.xlsx格式Excel的POI包 -->
+		<!-- microsoft的办公文件 -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.16</version>
 		</dependency>
 
+		<!-- .yml文件 -->
+		<dependency>
+			<groupId>org.jyaml</groupId>
+			<artifactId>jyaml</artifactId>
+			<version>1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
-
-
-	<!-- <build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-compiler-plugin</artifactId> <version>3.1</version> <configuration> 
-		<source>1.8</source> <target>1.8</target> </configuration> </plugin> </plugins> 
-		</build> -->
 </project>
